--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SURA\AppData\Local\Temp\testng-eclipse--927892338\testng-customsuite.xml</span>
+                    <span>C:\Users\SURA\AppData\Local\Temp\testng-eclipse-2063232429\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.JavaStreamEx" class="method navigator-link" hash-for-method="streamConcat">streamConcat</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.JavaStreamEx" class="method navigator-link" hash-for-method="streamMap">streamMap</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.JavaStreamEx" class="method navigator-link" hash-for-method="streamMis">streamMis</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.WebTablesSortTest" class="method navigator-link" hash-for-method="sortedTableTest">sortedTableTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,28 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">seleniumQA.JavaStreamEx</span>
+              <span class="class-name">seleniumQA.WebTablesSortTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="streamConcat">
-                  </a> <!-- streamConcat -->
-                  <span class="method-name">streamConcat</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="streamMap">
-                  </a> <!-- streamMap -->
-                  <span class="method-name">streamMap</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="streamMis">
-                  </a> <!-- streamMis -->
-                  <span class="method-name">streamMis</span>
+                  <a name="sortedTableTest">
+                  </a> <!-- sortedTableTest -->
+                  <span class="method-name">sortedTableTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -160,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SURA\AppData\Local\Temp\testng-eclipse--927892338\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SURA\AppData\Local\Temp\testng-eclipse-2063232429\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;seleniumQA.JavaStreamEx&quot;/&gt;
+      &lt;class name=&quot;seleniumQA.WebTablesSortTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -209,24 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'streamConcat')
-data.setCell(0, 2, 'seleniumQA.JavaStreamEx')
-data.setCell(0, 3, 11);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'streamMap')
-data.setCell(1, 2, 'seleniumQA.JavaStreamEx')
-data.setCell(1, 3, 6);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'streamMis')
-data.setCell(2, 2, 'seleniumQA.JavaStreamEx')
-data.setCell(2, 3, 2);
+data.setCell(0, 1, 'sortedTableTest')
+data.setCell(0, 2, 'seleniumQA.WebTablesSortTest')
+data.setCell(0, 3, 9738);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 ms</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -252,18 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">seleniumQA.JavaStreamEx</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">seleniumQA.WebTablesSortTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">streamConcat</span>
+                <span class="method-name">sortedTableTest</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">streamMap</span>
-                <span class="method-start">18 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">streamMis</span>
-                <span class="method-start">27 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
