--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SURA\AppData\Local\Temp\testng-eclipse-2063232429\testng-customsuite.xml</span>
+                    <span>C:\Users\SURA\AppData\Local\Temp\testng-eclipse-319181439\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.WebTablesSortTest" class="method navigator-link" hash-for-method="sortedTableTest">sortedTableTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="seleniumQA.relativeLocatorTest" class="method navigator-link" hash-for-method="invokingMultipleWindowsTest">invokingMultipleWindowsTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">seleniumQA.WebTablesSortTest</span>
+              <span class="class-name">seleniumQA.relativeLocatorTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="sortedTableTest">
-                  </a> <!-- sortedTableTest -->
-                  <span class="method-name">sortedTableTest</span>
+                  <a name="invokingMultipleWindowsTest">
+                  </a> <!-- invokingMultipleWindowsTest -->
+                  <span class="method-name">invokingMultipleWindowsTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SURA\AppData\Local\Temp\testng-eclipse-2063232429\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SURA\AppData\Local\Temp\testng-eclipse-319181439\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;seleniumQA.WebTablesSortTest&quot;/&gt;
+      &lt;class name=&quot;seleniumQA.relativeLocatorTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;invokingMultipleWindowsTest&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- seleniumQA.relativeLocatorTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'sortedTableTest')
-data.setCell(0, 2, 'seleniumQA.WebTablesSortTest')
-data.setCell(0, 3, 9738);
+data.setCell(0, 1, 'invokingMultipleWindowsTest')
+data.setCell(0, 2, 'seleniumQA.relativeLocatorTest')
+data.setCell(0, 3, 14796);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -209,9 +213,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">seleniumQA.relativeLocatorTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">relativeLocatorTest_TC01</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -220,11 +231,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">seleniumQA.WebTablesSortTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">sortedTableTest</span>
+              <div class="chronological-class-name">seleniumQA.relativeLocatorTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">LaunchBrowser</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">invokingMultipleWindowsTest</span>
+                <span class="method-start">930 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">closeDriver</span>
+                <span class="method-start">15734 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
